syntax = "proto3";

package rpc;

option go_package = "./pb";

import "internal/adapters/driven/grpc/proto/msg.proto";

service PostParser {
    rpc sendString(TextFieldsReq) returns (TextFieldRes) {};
    rpc singlePart (FileUploadReq)  returns (FileUploadRes) {};
    rpc multiPart(stream FileUploadReq) returns (FileUploadRes) {};
}